roles/aks-deployment/files/emqx.yml
apiVersion: v1
kind: Service
metadata:
  name: emqx
spec:
  ports:
  - port: 1883
    name: mqtt-public
  - port: 8083
    name: websocket
  - port: 8084
    name: secwebsocket
  - port: 8883
    name: mqtt-tls
    targetPort: 1883
  - port: 80
    name: websockets
    targetPort: 8083
  - port: 443
    name: secwebsockets
    targetPort: 8083  
  selector:
    app: emqx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx
  labels:
        app: emqx
spec:
  selector:
    matchLabels:
      app: emqx
  replicas: 2
  template:
    metadata:
      labels:
        app: emqx
    spec:
      serviceAccountName: access-api
      containers:
      - name: emqx
        image: emqx/emqx:latest
        ports:
        - name: emqx-dashboard
          containerPort: 18083
        tty: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tampere-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tampere-publisher
  template:
    metadata:
      labels:
        app: tampere-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: tampere-publisher
spec:
  ports:
  - name: "tampere-publisher-service"
    port: 3000
  selector:
    app: tampere-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkki-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkki-publisher
  template:
    metadata:
      labels:
        app: linkki-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: linkki-publisher
spec:
  ports:
  - name: "linkki-publisher-service"
    port: 3001
  selector:
    app: linkki-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lappeenranta-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lappeenranta-publisher
  template:
    metadata:
      labels:
        app: lappeenranta-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: lappeenranta-publisher
spec:
  ports:
  - name: "lappeenranta-publisher-service"
    port: 3002
  selector:
    app: lappeenranta-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joensuu-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joensuu-publisher
  template:
    metadata:
      labels:
        app: joensuu-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: joensuu-publisher
spec:
  ports:
  - name: "joensuu-publisher-service"
    port: 3003
  selector:
    app: joensuu-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuopio-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuopio-publisher
  template:
    metadata:
      labels:
        app: kuopio-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: kuopio-publisher
spec:
  ports:
  - name: "kuopio-publisher-service"
    port: 3004
  selector:
    app: kuopio-publisher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lahti-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lahti-publisher
  template:
    metadata:
      labels:
        app: lahti-publisher
    spec:
      containers:
      - name: gtfsrthttp2mqtt
        image: hsldevcom/gtfsrthttp2mqtt:latest
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: lahti-publisher
spec:
  ports:
  - name: "lahti-publisher-service"
    port: 3005
  selector:
    app: lahti-publisher
---
